temp fix for problem description overlapp with problem widget

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1064,7 +1064,7 @@ div.problems_widget table td{
 
 div#main_container .problem_description {
 	position: absolute;
-	right: 245px;
+	right: 265px;
 	left: 20px;
 	text-align: justify;
 	font-size: 13px;
